--- a/webgl二维矩阵.html
+++ b/webgl二维矩阵.html
@@ -21,19 +21,7 @@ uniform vec2 u_resolution;
 uniform mat3 u_matrix;
 
 void main() {
-  // Multiply the position by the matrix.
-  vec2 position = (u_matrix * vec3(a_position, 1)).xy;
-
-  // convert the position from pixels to 0.0 to 1.0
-  vec2 zeroToOne = position / u_resolution;
-
-  // convert from 0->1 to 0->2
-  vec2 zeroToTwo = zeroToOne * 2.0;
-
-  // convert from 0->2 to -1->+1 (clipspace)
-  vec2 clipSpace = zeroToTwo - 1.0;
-
-  gl_Position = vec4(clipSpace * vec2(1, -1), 0, 1);
+  gl_Position = vec4((u_matrix * vec3(a_position, 1)).xy, 0, 1);
 }
 </script>
 <!-- fragment shader -->
@@ -45,13 +33,7 @@ uniform vec4 u_color;
 void main() {
    gl_FragColor = u_color;
 }
-</script><!--
-for most samples webgl-utils only provides shader compiling/linking and
-canvas resizing because why clutter the examples with code that's the same in every sample.
-See https://webglfundamentals.org/webgl/lessons/webgl-boilerplate.html
-and https://webglfundamentals.org/webgl/lessons/webgl-resizing-the-canvas.html
-for webgl-utils, m3, m4, and webgl-lessons-ui.
--->
+</script>
 <script src="https://webglfundamentals.org/webgl/resources/webgl-utils.js"></script>
 <script src="https://webglfundamentals.org/webgl/resources/webgl-lessons-ui.js"></script>
 <script src="https://requirejs.org/docs/release/2.3.6/r.js"></script>
@@ -161,8 +143,13 @@ for webgl-utils, m3, m4, and webgl-lessons-ui.
         var rotationMatrix = m3.rotation(angleInRadians);
         var scaleMatrix = m3.scaling(scale[0], scale[1]);
 
+        // 计算矩阵 此矩阵代表了缩放到画布坐标
+        var projectionMatrix = m3.projection(
+          gl.canvas.clientWidth, gl.canvas.clientHeight);
+
         // Multiply the matrices.
-        var matrix = m3.multiply(translationMatrix, rotationMatrix);
+        var matrix = m3.multiply(projectionMatrix, translationMatrix);
+        matrix = m3.multiply(matrix, rotationMatrix);
         matrix = m3.multiply(matrix, scaleMatrix);
 
         // Set the matrix.
@@ -177,6 +164,14 @@ for webgl-utils, m3, m4, and webgl-lessons-ui.
     }
 
     var m3 = {
+      projection: function(width, height) {
+        // 注意：这个矩阵翻转了 Y 轴，所以 0 在上方
+        return [
+          2 / width, 0,           0,
+          0,         -2 / height, 0,
+          -1,         1,           1
+        ];
+      },
       translation: function(tx, ty) {
         return [
           1, 0, 0,
